--- a/1DCNN.ipynb
+++ b/1DCNN.ipynb
@@ -96,7 +96,7 @@
     "\t\tseq_x, seq_y = sequence[i:end_ix], sequence[end_ix]\n",
     "\t\tX.append(seq_x)\n",
     "\t\ty.append(seq_y)\n",
-    "\treturn array(X), array(y)\n",
+    "\treturn np.array(X), np.array(y)\n",
     "\n",
     "# define input sequence\n",
     "#raw_seq = [10, 20, 30, 40, 50, 60, 70, 80, 90]\n",
